hphp/test/zend/good/Zend/tests/finally_goto_004.php.expectf

Fatal error: 'goto' into loop or switch statement is disallowed in %s/finally_goto_004.php on line 2
